Add blog pagination feature and improve blog directory management; enhance Mermaid rendering and update documentation

--- a/electron-admin/renderer/index.html
+++ b/electron-admin/renderer/index.html
@@ -17,6 +17,10 @@
         Misaka Blog Admin
       </h1>
       <span class="version">v1.0.0</span>
+      <div class="blog-directory-info" id="blogDirectoryInfo" title="当前博客目录">
+        <span class="icon">📁</span>
+        <span class="blog-path" id="blogPath">加载中...</span>
+      </div>
     </div>
     <div class="toolbar-right">
       <button class="btn btn-primary" id="btnNewPost" title="新建文章 (Ctrl+N)">
